# sherpa-client

./: .gitignore  BUILD.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py
docs/_build/: .buildinfo  CHANGELOG.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: CHANGELOG.doctree  environment.pickle  index.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/sherpa_client/: client.html  types.html
docs/_build/_modules/sherpa_client/models/: ack.html  aggregation.html  annotate_binary_form.html  annotate_binary_with_plan_ref_multipart_data.html  annotate_documents_with_many.html  annotate_format_binary_with_plan_ref_multipart_data.html  annotate_text_with_many.html  annotated_doc_annotation.html  annotated_doc_annotation_properties.html  annotated_doc_category.html  annotated_doc_category_properties.html  annotated_document.html  annotated_document_metadata.html  annotation.html  annotation_facets.html  annotation_id.html  annotation_metrics.html  annotation_plan.html  annotation_status.html  annotation_term.html  annotation_term_properties.html  annotator.html  annotator_multimap.html  bearer_token.html  bucket.html  categories_facets.html  category.html  category_id.html  category_metrics.html  category_status.html  classification_config.html  converter.html  (+143 more)
docs/_build/_sources/: index.rst.txt
sherpa_client/: __init__.py  client.py  types.py
tests/: test_sherpa.py
tests/data/: 20_dummy_docs_with_categories.json  20_dummy_segs_with_annotations.json  credentials.json
(+170 files in other folders)
